--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
           keys:
             - "npm-packages"
       - run: npm audit
+      - run:
+          when: on_fail
 
 workflows:
   my_workflow:
